# 3d-cancer-cell-bioimage-ai-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
colab/: 00_colab_setup.ipynb  01_run_mvp_pipeline_colab.ipynb  02_train_2d_unet_colab.ipynb  03_train_3d_unet_colab.ipynb
configs/: a549_validation.yaml  mda231_mvp.yaml  paths.colab.example.yaml  paths.local.example.yaml
data/: README.md
notebooks/: 01_data_exploration.ipynb  02_baseline_segmentation.ipynb  03_feature_extraction.ipynb  04_tracking.ipynb  05_unet_2d_training.ipynb  06_model_comparison.ipynb
reports/: README.md
reports/milestone_2/metrics/: baseline_segmentation_metrics.csv  baseline_segmentation_metrics.json
reports/milestone_3/: feature_extraction_summary.md
reports/milestone_3/features/: mda231_cell_features.csv  mda231_feature_summary.csv
reports/milestone_4/: tracking_summary.md
reports/milestone_4/tracks/: mda231_cell_tracks.csv  mda231_track_summary.csv
scripts/: compare_segmentation_methods.py  evaluate_unet2d.py  explore_dataset.py  extract_features.py  inspect_dataset.py  run_baseline_segmentation.py  run_mvp_pipeline.py  run_tracking.py  setup_drive_dirs.py  train_unet2d.py
src/bioimage_pipeline/: __init__.py
src/bioimage_pipeline/config/: __init__.py  load_config.py
src/bioimage_pipeline/data/: __init__.py  ground_truth.py  inspect_dataset.py  load_images.py
tests/: test_imports.py  test_milestone1.py  test_milestone2.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6.py
(+24 files in other folders)
